// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaBreadcrumb Mathes snapshot: with last slash 1`] = `
<nav aria-label="breadcrumb" class="bx--breadcrumb">
  <div class="bx--breadcrumb-item">
    <a href="#" class="bx--link"></a>
  </div>
  <div class="bx--breadcrumb-item">
    <a href="#" class="bx--link"></a>
  </div>
</nav>
`;

exports[`CaBreadcrumb Mathes snapshot: without last slash 1`] = `
<nav aria-label="breadcrumb" class="bx--breadcrumb bx--breadcrumb--no-trailing-slash">
  <div class="bx--breadcrumb-item">
    <a href="#" class="bx--link"></a>
  </div>
  <div class="bx--breadcrumb-item">
    <a href="#" class="bx--link"></a>
  </div>
</nav>
`;
